[package]
name = "embedded-session"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "embedded-session"
path = "src/embedded-session/main.rs"

[[bin]]
name = "embedded-session-exec"
path = "src/embedded-session-exec/main.rs"

[dependencies]
argh = "0.1.12"
bytevec2 = "0.3.1"
chrono = "0.4.38"
serde = "1.0.215"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-unix = "0.0.0"
users = "0.11.0"
